Metabase instructions.